# layered-populate-data-pool-da

./: .gitattributes  .gitignore  IMPLEMENTATION_PLAN.md  README.md  UI_UX Technical Document - Mini Dashboard (V1.0).docx  ami data  banks-data-modelling.ipynb  berlin_kitas_processed.geojson  berlin_kitas_raw.csv  berlin_schools(EPSG23833).geojson  berlin_schools(EPSG4326).geojson  berlin_schools.csv  berlin_schools_pre.csv  berlin_schools_with_startchancen.csv  berlin_schools_with_student_teacher_data.csv  berlin_scraper_naji.ipynb  berlin_scraper_naji.py  bus-data-transformation  create_pr_script.sh  database_schema.sql  download_data.py  download_report.md  fix_git_issues.sh  git_merge_script.sh  git_push_script.sh  github_events_20250903_093605.csv  hospitals readme.md  hospitals-in-germany.csv  kindergartens_berlin_final_ready (3).csv  kindergartens_in_berlin__data_transformation.py  kindergartens_in_berlin_data_extraction (1).ipynb  populating_terminal.md  property-listings-extraction.md  readme.md  readme_naji_jupyter.md  readme_naji_python.md  requirements.txt  resolve_conflict_final.sh  resolve_conflict_script.sh  sbahn_stations_transformed.csv  (+7 more)
db_population_utils/Anna/: .coverage  .coveragerc  .env  pyproject.toml
db_population_utils/Anna/db_population_utils/: .env  __init__.py
db_population_utils/Anna/db_population_utils/data_processor/: README.md  __init__.py  basic_geo_validator.py  column_standardizer.py  data_processor.py  ml_data_preparer.py  webscraping_cleaner.py
db_population_utils/Anna/db_population_utils/examples/: basic_geo_validation.py  cast_dedupe_and_stable_id_via_dp.py  clean_simple_demo.py  end_to_end.py  geo_validation_via_process.py  ml_prep_via_dp.py  standardize_and_clean.py  standardize_and_clean_01.py
db_population_utils/Anna/db_population_utils/tests/: test_adapter_like_smoke.py  test_basic_geo_validator_branches.py  test_column_standardizer.py  (+15 more)
(+680 files in other folders)
